syntax = "proto3";
package ink.pmc.transfer.proto;

message ConditionVerifyReq {
  string uuid = 1;
  string destination = 2;
}

enum ConditionVerifyResult {
  VERIFY_SUCCEED = 0;
  VERIFY_FAILED = 1;
  VERIFY_OFFLINE = 2;
}

message ConditionVerifyRsp {
  ConditionVerifyResult result = 1;
  optional string errorMessage = 2;
}