syntax = "proto3";
package ink.pmc.transfer.proto;

import "Destination.proto";

message DestinationBundle {
  repeated ProtoDestination destinations = 1;
}